# cabalinfo

./: CHANGELOG.md  README.md  cabalinfo.cabal  flake.nix
app/: Main.hs
src/: Cabalinfo.hs  Prelude.hs
src/Cabalinfo/: CustomPrelude.hs
src/Cabalinfo/Helpers/: SignalHandlers.hs
test/: CabalinfoTest.hs
