cabal-version:      2.4
name:               cabalinfo
version:            0.1.0.0
synopsis:

description: Program to show some info about cabal package or project
homepage: https://github.com/ivanovs-4/cabalinfo

-- bug-reports:
license:            BSD-2-Clause
author:             Sergey Ivanov
maintainer:         ivanovs-4@yandex.ru

-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-deps
    default-language:    Haskell2010

    mixins:
        base (Prelude as BasePrelude)
      , base hiding (Prelude)

    default-extensions:

        ApplicativeDo
        ConstraintKinds
        DataKinds
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingStrategies
        DerivingVia
        ExtendedDefaultRules
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        NoMonomorphismRestriction
        OverloadedLabels
        OverloadedStrings
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        ViewPatterns

    build-depends:    base ^>=4.14.1.0
      , safe
      , text
      , unix

      , optparse-applicative
      , filepath
      , directory
      , Cabal
      , cabal-install-parsers
      , lens
      , generic-lens

library
    import: common-deps
    hs-source-dirs:   src
    exposed-modules:
        Cabalinfo
        Cabalinfo.Helpers.SignalHandlers
        Cabalinfo.CustomPrelude
    other-modules:
        Prelude

executable cabalinfo
    import: common-deps
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        cabalinfo

test-suite cabalinfo-test
    import: common-deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          CabalinfoTest.hs
    other-modules:
        Prelude
    build-depends:
        cabalinfo
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
